--- a/member.html
+++ b/member.html
@@ -9,7 +9,8 @@
 		<h1>ISAUW Member Sign Up</h1>
 
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Thank you for your interest for the Indonesian Student Association at the University of Washington. If you are interested in Indonesian communities or culture, you can join us as a Member of Indonesian Student Association at the University of Washington by filling
+		the form below so that you'll be the first one to know if we have new exciting events and volunteer opportuninites.
 		</p>
 		
 		<hr />
@@ -17,28 +18,28 @@
 		<form action="member.php" method="post">
 		<div>
 			<label>
-				<strong>Name</strong> 
+				<span>Name</span> 
 				<input type="text" name="name">
 			</label>
 		</div>
 
 		<div>
 			<label>
-				<strong>Email</strong> 
+				<span>Email</span> 
 				<input type="text" name="email">
 			</label>
 		</div>
 
 		<div>
 			<label>
-				<strong>Major</strong> 
+				<span>Major</span> 
 				<input type="text" name="major">
 			</label>
 		</div>
 
 		<div>
 			<label>
-				<strong>Class Standing</strong>
+				<span>Class Standing</span>
 				<select name="standing">
 					<option>Freshman</option>
 					<option>Sophomore</option>
@@ -51,14 +52,14 @@
 
 		<div>
 			<label>
-				<strong>Sign Up Date</strong>
-				<input type="text" name="signdate">
+				<span>Sign Up Date</span>
+				<input type="text" name="signdate" placeholder="dd/mm/yyyy">
 			</label>
 		</div>
 
-		<div>	
+		<div class="subs">	
 			<label>
-				<input type="checkbox" name="subscription" value="subs">Subscribe
+				<input type="checkbox" name="subscription" value="subs"> Subscribe
 			</label>
 		</div>
 
