Added merchandise admin + admin fix

--- a/sign-up/member.html
+++ b/sign-up/member.html
@@ -11,8 +11,7 @@
 		<h1>ISAUW Member Sign Up</h1>
 
 		<p>
-			Thank you for your interest for the Indonesian Student Association at the University of Washington. If you are interested in Indonesian communities or culture, you can join us as a Member of Indonesian Student Association at the University of Washington by filling
-		the form below so that you'll be the first one to know if we have new exciting events and volunteer opportuninites.
+			Thank you for your interest in becoming a member of the Indonesian Student Association at the University of Washington. Kindly fill the sign up form below carefully.
 		</p>
 		
 		<hr />
